--- a/build.gradle
+++ b/build.gradle
@@ -7,12 +7,11 @@
 import org.apache.commons.codec.binary.Base64 
 
 
-
-
 plugins {
     id 'org.jetbrains.kotlin.multiplatform' version '1.3.41'
-    id 'war' apply:false version ''
 }
+
+ext.web_dir = 'prg'
 
 
 repositories {
@@ -54,7 +53,6 @@ kotlin {
         jvmMain {
             dependencies {
                implementation kotlin('stdlib') 
-               implementation 'javax.servlet:javax.servlet-api:4.0.1'
             }
         }
     }
@@ -64,3 +62,26 @@ kotlin {
 }
     
 
+build.doLast {
+    copy {
+        includeEmptyDirs false
+        from 'build/classes/kotlin/js/main'
+        into "${web_dir}"
+    }
+    copy {
+        includeEmptyDirs false
+        exclude 'kotlin-test/'
+        from 'build/js/packages_imported/'
+        into "${web_dir}"
+    }
+    copy {
+        includeEmptyDirs false
+        from 'build/processedResources/js/main/'
+        into "${web_dir}/mswp"
+ 
+     }
+}
+
+clean.doFirst {
+    delete "${web_dir}/"
+}
