--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ import org.apache.commons.codec.binary.Base64
 plugins {
     id 'org.jetbrains.kotlin.multiplatform' version '1.3.41'
     id 'com.moowork.node' version '1.3.1'
+    id 'com.moowork.gulp' version '1.2.0'
 }
 
 ext.web_dir = 'prg'
@@ -61,7 +62,12 @@ kotlin {
         
     }
 }
+
+
     
+gulp_css.dependsOn jsMainClasses
+
+// compileReleaseJsKotlinNative.dependsOn gulp_css
 
 build.doLast {
     copy {
