--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": ">=1.0.0",
+    "js-beautify": "^1.10.2",
+    "less": "^3.10.3",
     "ts2kt": ">=0.1.3"
   },
   "devDependencies": {
-    "@fortawesome/fontawesome-free": "^5.10.2"
+    "@fortawesome/fontawesome-free": "^5.10.2",
+    "gulp": "^4.0.2",
+    "gulp-less": "^4.0.1"
   }
 }
