--- a/build.gradle
+++ b/build.gradle
@@ -64,8 +64,7 @@ kotlin {
 }
 
 
-    
-gulp_css.dependsOn jsMainClasses
+jsMainClasses.dependsOn gulp_css
 
 // compileReleaseJsKotlinNative.dependsOn gulp_css
 
