--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^5.10.2",
+    "bootstrap": "^4.3.1",
     "gulp": "^4.0.2",
     "gulp-less": "^4.0.1"
   }
