I worked around the bug for raising exception when icon is saved.

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,9 @@ gradle-app.setting
 prg/
 config.php
 .htaccess
+TextureText.txt
+composer.json
+composer.lock
+composer.phar
+node_modules/
+vendor/
