I am writing a article -- 'To parse A command of svg path commands'

--- a/doc/develop-3.rc
+++ b/doc/develop-3.rc
@@ -6,9 +6,18 @@
             "type": "website"
         },
         "title": "To solve ellipse center",
-		"using": [
-			"polyfill",
-			"mathjax"
-		]	
+        "customs" : [
+          [
+            "<script>window.MathJax = { ",
+            " tex: {",
+            "   tags: 'ams'",
+            " }",   
+            "};</script>"
+          ]
+        ], 
+        "using": [
+            "polyfill",
+            "mathjax"
+        ]	
     }
 }
