--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ import org.apache.commons.codec.binary.Base64
 
 
 plugins {
+    id 'java'
     id 'org.jetbrains.kotlin.multiplatform' version '1.3.41'
     id 'com.moowork.node' version '1.3.1'
     id 'com.moowork.gulp' version '1.2.0'
@@ -16,14 +17,16 @@ plugins {
 ext.web_dir = 'prg'
 
 
-repositories {
-    // Use jcenter for resolving dependencies.
+
+repositories { // Use jcenter for resolving dependencies.
     // You can declare any Maven/Ivy/file repository here.
     jcenter()
 }
 
 kotlin {
     jvm() {
+
+        print compilations.main.runtimeDependencyFiles
     }
     js() {
         compilations.main.kotlinOptions {
@@ -54,7 +57,7 @@ kotlin {
         }
         jvmMain {
             dependencies {
-               implementation kotlin('stdlib') 
+                implementation kotlin('stdlib') 
             }
         }
     }
@@ -66,7 +69,24 @@ kotlin {
 
 jsMainClasses.dependsOn gulp_css
 
-// compileReleaseJsKotlinNative.dependsOn gulp_css
+task createFigureForDoc(type: JavaExec) {
+
+    def target = kotlin.targets.jvm
+    def compilation = target.compilations.main
+
+
+    classpath = files(compilation.runtimeDependencyFiles,
+        compilation.output.allOutputs)
+    
+    // def target = kotlin.target.jvm
+    // classpath = target.compilations.main.runtimeDependencyFiles
+    main = 'net.ocsoft.gen.img.SvgKt'
+    args = ['-f', 'imgen.json' ]
+}
+
+createFigureForDoc.description = 'generate figure for document' 
+createFigureForDoc.group = 'Documentation'
+createFigureForDoc.dependsOn jvmJar
 
 build.doLast {
     copy {
@@ -101,7 +121,6 @@ build.doLast {
         into "./webfonts"
     }
 }
-
 clean.doFirst {
     delete "${web_dir}/"
     delete "./webfonts"
