Added og-image for the doc-3.

--- a/doc/develop-3.rc
+++ b/doc/develop-3.rc
@@ -1,7 +1,7 @@
 {
     "head": {
         "og": {
-            "image": "/img/webfontloader-1.png",
+            "image": "/img/ellipse-center.png",
             "title": "To solve ellipse center",
             "type": "website"
         },
