--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,7 @@ repositories { // Use jcenter for resolving dependencies.
 kotlin {
     jvm() {
 
-        print compilations.main.runtimeDependencyFiles
+//       print compilations.main.runtimeDependencyFiles
     }
     js() {
         compilations.main.kotlinOptions {
