--- a/build.gradle
+++ b/build.gradle
@@ -109,7 +109,8 @@ resolveEllipseCenter.dependsOn jvmJar
 build.doLast {
     copy {
         includeEmptyDirs false
-        from 'build/classes/kotlin/js/main'
+        from 'build/classes/kotlin/js/main/' 
+        exclude 'mswp/'
         into "${web_dir}"
     }
     copy {
