--- a/build.gradle
+++ b/build.gradle
@@ -133,6 +133,8 @@ task msgfmts {
 
 }
 
+build.dependsOn msgfmts
+
 task createFigureForDoc(type: JavaExec) {
 
     def target = kotlin.targets.jvm
@@ -201,7 +203,11 @@ build.doLast {
         into "${web_dir}/fontawesome-free/js"           
     }
 }
+
+
+
 clean.doFirst {
     delete "${web_dir}/"
     delete "./css"
+    delete "${projectDir}/i18n"
 }
