I work on progress to change loading style from amd to commaonjs.

--- a/.gitignore
+++ b/.gitignore
@@ -10,8 +10,9 @@ prg/
 config.php
 .htaccess
 TextureText.txt
-composer.json
-composer.lock
 composer.phar
 node_modules/
 vendor/
+php.ini
+webfonts/
+composer-setup.php
