--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "@fortawesome/fontawesome-svg-core": ">=1.0.0",
     "js-beautify": "^1.10.2",
     "less": "^3.10.3",
-    "ts2kt": ">=0.1.3"
+    "ts2kt": ">=0.1.3",
+    "webfontloader": "^1.6.28"
   },
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^5.10.2",
