I fixed a bug not to compiler test code because of using a method.
I worked around not to compile test code by moving a method  from commonTest folder to jvmTest.  The code contained java.String.format method to generate test code.

--- a/build.gradle
+++ b/build.gradle
@@ -67,6 +67,11 @@ kotlin {
                 implementation kotlin('stdlib') 
             }
         }
+        jvmTest {
+            dependencies {
+                implementation kotlin('test-junit')
+            }
+        }
     }
     targets.all {
         
