--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ plugins {
     id 'com.moowork.gulp' version '1.2.0'
 }
 
+
 ext.web_dir = 'prg'
 ext.packageVersion = '0.3.0'
 ext.ocSoftEmail0 = 'toshi@oc-soft.net'
@@ -33,12 +34,13 @@ kotlin {
     js() {
         browser() {
             webpackTask() {
-                output.libraryTarget = 'commonjs' 
+                output.libraryTarget = 'umd' 
             }
         } 
         compilations.main.kotlinOptions {
-            moduleKind='commonjs'
+            
         }
+
     }
     sourceSets {
         commonMain {
@@ -60,6 +62,13 @@ kotlin {
                 implementation kotlin('stdlib')
                 implementation kotlin('stdlib-js')
                 implementation 'org.jetbrains.kotlinx:kotlinx-html-js:0.6.12'
+                implementation npm('webfontloader', '1.6.28')
+                implementation npm('jquery', 'latest')
+                implementation npm('find-file-up', '2.0.1' )
+
+                // I wait to fix not to attach tabAsync correctly.
+                implementation npm('html-webpack-plugin', '4.0.2');
+                implementation npm('webpack-cdn-plugin', '3.3.1');
             }
         }
         jvmMain {
@@ -187,7 +196,7 @@ resolveEllipseCenter.dependsOn jvmJar
 build.doLast {
     copy {
         includeEmptyDirs false
-        from 'build/classes/kotlin/js/main/' 
+        from 'build/distributions' 
         exclude 'mswp/'
         into "${web_dir}"
     }
