--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@fortawesome/fontawesome-free": "^5.10.2",
     "bootstrap": "^4.3.1",
     "gulp": "^4.0.2",
-    "gulp-less": "^4.0.1"
+    "gulp-less": "^4.0.1",
+    "jquery": "^3.4.1",
+    "webpack": "^4.42.1"
   }
 }
