--- a/build.gradle
+++ b/build.gradle
@@ -7,9 +7,9 @@
 plugins {
     id 'java'
     id 'org.jetbrains.kotlin.multiplatform' version '1.3.70'
-    id 'com.moowork.node' version '1.3.1'
-    id 'com.moowork.gulp' version '1.2.0'
 }
+
+
 
 
 ext.web_dir = 'prg'
@@ -23,17 +23,13 @@ repositories { // Use jcenter for resolving dependencies.
 }
 
 
-
-
-
-
 kotlin {
-    jvm() {
+    jvm {
 
     }
-    js() {
-        browser() {
-            webpackTask() {
+    js {
+        browser {
+            webpackTask {
                 output.libraryTarget = 'umd' 
             }
         } 
@@ -61,14 +57,22 @@ kotlin {
             dependencies {
                 implementation kotlin('stdlib')
                 implementation kotlin('stdlib-js')
-                implementation 'org.jetbrains.kotlinx:kotlinx-html-js:0.6.12'
-                implementation npm('webfontloader', '1.6.28')
-                implementation npm('jquery', 'latest')
-                implementation npm('find-file-up', '2.0.1' )
 
-                // I wait to fix not to attach tabAsync correctly.
-                implementation npm('html-webpack-plugin', '4.0.2');
-                implementation npm('webpack-cdn-plugin', '3.3.1');
+                implementation npm('find-file-up', '2.0.1' )
+                implementation npm('html-webpack-plugin', '4.0.2')
+                implementation npm('webpack-cdn-plugin', '3.3.1')
+                implementation npm('clean-webpack-plugin', '3.0.0')
+                implementation npm('mini-css-extract-plugin', '0.9.0')
+                implementation npm('css-loader','3.5.2')
+                implementation npm('less-loader', '5.0.0')
+
+                implementation npm('bootstrap', '4.4.1')
+                implementation npm('@popperjs/core', '2.2.3')
+                implementation npm('gl-matrix', '3.3.0')
+                implementation npm('webfontloader', '1.6.28')
+                implementation npm('jquery', '3.5.0')
+                implementation npm('@fortawesome/fontawesome-svg-core',
+                    '1.2.28')
             }
         }
         jvmMain {
@@ -87,13 +91,21 @@ kotlin {
     }
 }
 
-
-jsMainClasses.dependsOn gulp_css
-
 task xgetText(type: Exec) {
     executable = 'xgettext'
 }
 
+task runMainJvm(type: JavaExec) {
+    main = 'net.ocsoft.mswp.EntryKt' 
+    def target = kotlin.targets.jvm
+    def compilation = target.compilations.main
+
+    classpath += compilation.runtimeDependencyFiles
+    classpath += files(jvmJar.archivePath)
+
+}
+
+runMainJvm.dependsOn jvmJar
 
 
 task xgettextphp {
@@ -155,7 +167,6 @@ task msgfmts {
 build.dependsOn msgfmts
 
 task createFigureForDoc(type: JavaExec) {
-
     def target = kotlin.targets.jvm
     def compilation = target.compilations.main
 
@@ -173,17 +184,72 @@ task resolveEllipseCenter(type: JavaExec) {
     def target = kotlin.targets.jvm
     def compilation = target.compilations.main
 
-
     classpath = files(compilation.runtimeDependencyFiles,
         compilation.output.allOutputs)
     
     args = ['-f', 'elli-param-1.json' ]
     main = 'net.ocsoft.geom.EllipseCenterKt'
-
 }
 
 
+task webpackJsDeploy(type: Copy) {
+    def distDir = null
+    kotlin {
+        js {
+            browser {
+                distribution {
+                    distDir =  directory
+                }
+            } 
+        }
+    }
 
+
+    from distDir
+    include '**/*.js'
+    into projectDir
+    // todo: you need to have a switch whether development or prduction
+    if (true) {
+        include '**/*.js.map'
+    }
+}
+
+task webpackViewDeploy(type: Copy) {
+    def distDir = null
+    kotlin {
+        js {
+            browser {
+                distribution {
+                    distDir =  directory
+                }
+            } 
+        }
+    }
+    from distDir
+    include '*.php'
+    into new File(projectDir, 'template')
+}
+
+task webpackCssDeploy(type: Copy) {
+    def distDir = null
+    kotlin {
+        js {
+            browser {
+                distribution {
+                    distDir =  directory
+                }
+            } 
+        }
+    }
+    from distDir
+    include 'css/**/*.css'
+    into projectDir
+}
+
+
+jsMainClasses.dependsOn webpackJsDeploy
+jsMainClasses.dependsOn webpackViewDeploy
+jsMainClasses.dependsOn webpackCssDeploy
 
 createFigureForDoc.description = 'generate figure for document' 
 createFigureForDoc.group = 'Documentation'
@@ -194,6 +260,7 @@ resolveEllipseCenter.group = 'Calculation'
 resolveEllipseCenter.dependsOn jvmJar
 
 build.doLast {
+    /*
     copy {
         includeEmptyDirs false
         from 'build/distributions' 
@@ -206,6 +273,7 @@ build.doLast {
         from 'build/js/packages_imported/'
         into "${web_dir}"
     }
+   */
     copy {
         includeEmptyDirs false
         from 'build/processedResources/js/main/'
