--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": ">=1.0.0",
+    "find-style": "file:find-style",
     "js-beautify": "^1.10.2",
     "less": "^3.10.3",
     "ts2kt": ">=0.1.3",
