--- a/package.json
+++ b/package.json
@@ -5,14 +5,10 @@
     "find-style": "file:find-style",
     "js-beautify": "^1.10.2",
     "less": "^3.10.3",
-    "ts2kt": ">=0.1.3",
-    "webfontloader": "^1.6.28"
+    "ts2kt": ">=0.1.3"
   },
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^5.10.2",
-    "bootstrap": "^4.3.1",
-    "gulp-less": "^4.0.1",
-    "jquery": "^3.4.1",
-    "webpack": "^4.42.1"
+    "jquery": "^3.4.1"
   }
 }
