--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ plugins {
     id 'org.jetbrains.kotlin.multiplatform' version '1.3.70'
 }
 
+ext.site_dir = 'mswp/'
 ext.web_dir = 'prg'
 ext.packageVersion = '0.3.0'
 ext.ocSoftEmail0 = 'toshi@oc-soft.net'
@@ -98,7 +99,8 @@ jsBrowserProductionWebpack{
         def gradleBuildSrc = new File(new File(projectDir, "tools"), jsName)    
         def binding = [
             config: """{
-    programDir: '$web_dir'
+    programDir: '${site_dir}${web_dir}',
+    cssDir: '${site_dir}css'
 }"""
         ]
         def tmp = new groovy.text.StreamingTemplateEngine()
