--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ ext.webpackSetting = [
 ]
 ext.webpackSetting.gradleBuildPath =
     new File(new File(projectDir, "webpack.config.d"),
-         webpackSetting.gradleBuildJs)
+         "_${webpackSetting.gradleBuildJs}")
 
 
 repositories { // Use jcenter for resolving dependencies.
@@ -106,7 +106,7 @@ jsBrowserProductionWebpack{
         def tmp = new groovy.text.StreamingTemplateEngine()
         tmp = tmp.createTemplate(gradleBuildSrc) 
         def gradleBuildDestDir = new File(projectDir, "webpack.config.d")    
-        def gradleBuildDest = new File(gradleBuildDestDir, "_${jsName}") 
+        def gradleBuildDest = new File(gradleBuildDestDir, "${jsName}") 
         webpackSetting.gradleBuildPath.text = tmp.make(binding)
 
     }
