I work in progress to use rust-wasm library for matrix operation.

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "dukat"]
 	path = dukat
 	url = https://github.com/Kotlin/dukat.git
+[submodule "glrs"]
+	path = glrs
+	url = ssh://toshi@oc-soft.net/home/toshi/projects/repo/glrs.git
