--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ plugins {
     id 'org.jetbrains.kotlin.multiplatform' version '1.3.70'
 }
 
-ext.site_dir = 'mswp/'
+ext.site_dir = 'mswp'
 ext.web_dir = 'prg'
 ext.packageVersion = '0.3.0'
 ext.ocSoftEmail0 = 'toshi@oc-soft.net'
@@ -19,7 +19,6 @@ ext.webpackSetting = [
 ext.webpackSetting.gradleBuildPath =
     new File(new File(projectDir, "webpack.config.d"),
          "_${webpackSetting.gradleBuildJs}")
-
 
 repositories { // Use jcenter for resolving dependencies.
     // You can declare any Maven/Ivy/file repository here.
@@ -76,6 +75,7 @@ kotlin {
                 implementation npm('@fortawesome/fontawesome-svg-core',
                     '1.2.28')
                 implementation npm('@fortawesome/fontawesome-free', '5.13.0')
+                implementation npm('./glrs', 'latest')
             }
         }
         jvmMain {
@@ -95,14 +95,18 @@ task xgetText(type: Exec) {
     executable = 'xgettext'
 }
 
-jsBrowserProductionWebpack{
+task wasmPack(type: Exec) {
+    executable = 'wasm-pack'
+}
+
+jsBrowserProductionWebpack {
     doFirst {
         def jsName = 'gradle-build.js'
         def gradleBuildSrc = new File(new File(projectDir, "tools"), jsName)    
         def binding = [
             config: """{
-    programDir: '${site_dir}${web_dir}',
-    cssDir: '${site_dir}css'
+    programDir: '${web_dir}/${site_dir}',
+    cssDir: 'css'
 }"""
         ]
         def tmp = new groovy.text.StreamingTemplateEngine()
@@ -116,7 +120,7 @@ jsBrowserProductionWebpack{
         def destDir = destinationDirectory 
         copy { 
             from jsProcessResources.destinationDir
-            into new File(new File(destDir, web_dir), 'mswp')
+            into new File(new File(destDir, web_dir), site_dir)
         }
     } 
 }
@@ -157,9 +161,30 @@ task xgettextphp {
     doFirst {
         mkdir(outDir)        
     }
-
 }
 
+task glrsBuild {
+    def pkgname = 'glrs@latest'
+    def pkgdir = new File(kotlinNodeJs.rootPackageDir, pkgname)   
+    wasmPack.args += "build"
+    wasmPack.args += "-d"
+    wasmPack.args += "${pkgdir}"
+    wasmPack.args += "-t"
+    wasmPack.args += "no-modules"
+    wasmPack.args += new File(projectDir, "glrs")
+    finalizedBy wasmPack 
+}
+
+kotlinNpmInstall.dependsOn glrsBuild
+
+task jsLibraries(type: Copy) {
+    def jsRoot = new File(new File(new File(projectDir, 'src'), 'jsMain'), 'js')
+    def dstRoot = kotlinNodeJs.projectPackagesDir
+    from new File(jsRoot, 'libraries.js')
+    into new File(dstRoot, project.name)
+}
+
+jsBrowserProductionWebpack.dependsOn jsLibraries
 
 task msgfmts {
     def srcDir = file("${projectDir}/src/i18n")
@@ -281,13 +306,6 @@ clean.dependsOn cleanWebpackViewDeploy
 //    into "${web_dir}/mswp"
 //}
 
-
-jsBrowserTest {
-    doFirst {
-        // println compilation.processResourcesTaskName
-        // println compilation.npmProject.dir
-    }
-}
 
 
 
