--- a/build.gradle
+++ b/build.gradle
@@ -9,8 +9,9 @@ plugins {
     id 'org.jetbrains.kotlin.multiplatform' version '1.3.70'
 }
 
-ext.site_dir = 'mswp'
-ext.web_dir = 'prg'
+ext.site_dir = 'mswp/'
+ext.web_dir = 'prg/'
+ext.web_app_pkg = 'mswp/'
 ext.packageVersion = '0.4.0'
 ext.ocSoftEmail0 = 'toshi@oc-soft.net'
 ext.webpackSetting = [
@@ -102,8 +103,8 @@ task webpackGradleBuild {
         def gradleBuildSrc = new File(new File(projectDir, "tools"), jsName)    
         def binding = [
             config: """{
-    programDir: '${site_dir}/${web_dir}',
-    cssDir: 'css'
+    programDir: '${site_dir}${web_dir}',
+    cssDir: '${site_dir}css'
 }"""
         ]
         def tmp = new groovy.text.StreamingTemplateEngine()
@@ -295,6 +296,10 @@ task resolveEllipseCenter(type: JavaExec) {
 task webpackDeploy(type: Copy) {
     def distDir = null
     distDir = jsBrowserDistributeResources.destinationDir
+    if (web_app_pkg?.trim()) {
+        println "add web_app_pkg"
+        distDir = new File(distDir, web_app_pkg)
+    }
 
     from distDir
     exclude '**/*.php'
@@ -310,8 +315,13 @@ jsMainClasses.dependsOn webpackDeploy
 
 task deployResources0(type: Copy) {
     def distDir = jsBrowserDistributeResources.destinationDir
+   
+    if (web_app_pkg?.trim()) {
+        distDir = new File(distDir, web_app_pkg)
+    }
+
     from jsProcessResources.destinationDir
-    into new File(new File(distDir, site_dir), web_dir)
+    into new File(distDir, web_dir)
 }
 
 webpackDeploy.dependsOn deployResources0
@@ -322,9 +332,12 @@ task deployResources1(type: Copy) {
     def src = new File(
         new File(kotlinNodeJs.rootPackageDir, pkgname),
         "glrs_bg.wasm")
- 
+    if (web_app_pkg?.trim()) {
+        distDir = new File(distDir, web_app_pkg)
+    }
+
     from  src
-    into new File(new File(distDir, site_dir), web_dir)
+    into new File(distDir, web_dir)
 }
 
 webpackDeploy.dependsOn deployResources1
