--- a/.gitmodules
+++ b/.gitmodules
@@ -9,4 +9,4 @@
 	url = ../../npm/find-package.git
 [submodule "glrs"]
 	path = glrs
-	url = ssh://toshi@oc-soft.net/home/toshi/projects/repo/glrs.git
+	url = ../../glrs.git
