--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": ">=1.0.0",
+    "@oc-soft/color-picker": "file:color-picker",
     "find-package": "file:find-package",
     "find-style": "file:find-style",
     "js-beautify": "^1.10.2",
