--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "dependencies": {
-    "@fortawesome/fontawesome-svg-core": ">=1.0.0",
-    "@oc-soft/color-picker": "file:color-picker",
+  "devDependencies": {
     "find-package": "file:find-package",
     "find-style": "file:find-style",
-    "js-beautify": "^1.10.2",
     "less": "^3.10.3",
-    "ts2kt": ">=0.1.3"
-  },
-  "devDependencies": {
     "@fortawesome/fontawesome-free": "^5.10.2",
-    "jquery": "^3.4.1"
+    "@fortawesome/fontawesome-svg-core": ">=1.0.0",
+    "@popperjs/core": "^2.5.3",
+    "bootstrap": "^4.5.3",
+    "webfontloader": "^1.6.28"
+  },
+  "dependencies": {
+    "jquery": "^3.5.1"
   }
 }
